[gd_scene load_steps=13 format=3 uid="uid://byymt36r5asdt"]

[ext_resource type="Script" path="res://scripts/level_1.gd" id="1_7b8lq"]
[ext_resource type="Texture2D" uid="uid://cax1s3vm8idlb" path="res://assets/art/tilesets/plains.png" id="2_m24kd"]
[ext_resource type="Texture2D" uid="uid://ce230qyugsh85" path="res://assets/art/tilesets/grass.png" id="3_oi7qo"]
[ext_resource type="Texture2D" uid="uid://dgg0oj3muujej" path="res://assets/art/objects/objects.png" id="4_y10kc"]
[ext_resource type="PackedScene" uid="uid://v4hrjcqkel1b" path="res://scenes/player.tscn" id="5_7dgp0"]
[ext_resource type="PackedScene" uid="uid://coegvqdmc5s6" path="res://scenes/enemy.tscn" id="6_km6xp"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_l3srv"]
texture = ExtResource("2_m24kd")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
3:1/0 = 0
3:2/0 = 0
2:2/0 = 0
1:2/0 = 0
1:1/0 = 0
2:1/0 = 0
4:0/0 = 0
4:1/0 = 0
5:1/0 = 0
5:0/0 = 0
1:4/0 = 0
1:5/0 = 0
2:5/0 = 0
2:6/0 = 0
3:6/0 = 0
3:5/0 = 0
3:4/0 = 0
2:4/0 = 0
1:6/0 = 0
4:4/0 = 0
4:5/0 = 0
4:6/0 = 0
5:6/0 = 0
5:5/0 = 0
5:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gy6lm"]
texture = ExtResource("3_oi7qo")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cvlds"]
texture = ExtResource("4_y10kc")
0:0/0 = 0
0:0/0/y_sort_origin = 4
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.87782, 2.91682, 5.87782, 2.91682, 1.81196, 4.86136, -1.81196, 4.86136)
0:1/0 = 0
0:1/0/y_sort_origin = 5
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.8125, -2.75, 0.6875, -0.375, 6.8125, -1.875, 6.4375, 3.375, 3.1875, 6.625, -1.1875, 6.875, -6.8125, 3.875, -8, 0.25)
5:0/0 = 0
5:0/0/y_sort_origin = 5
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.11526, 0.972272, 7.02687, 1.06066, 6.93849, 6.01041, -7.20365, 5.92202)
0:5/size_in_atlas = Vector2i(3, 4)
0:5/0 = 0
0:5/0/y_sort_origin = 20
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.1875, 25.875, -11.6875, 22.5, -11.9375, 18.875, -11.6875, 15.125, -9.6875, 13.25, 7.4375, 12.25, 11.8125, 18.5, 11.9375, 21.5, 9.8125, 25.75)
6:7/size_in_atlas = Vector2i(2, 2)
6:7/0 = 0
6:7/0/y_sort_origin = 9
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9.8125, 14.75, -11.8125, 13.25, -15.5625, 10.25, -15.8125, 6.875, 15.5625, 6.125, 15.6875, 8.75, 10.3125, 13.625, 0.0625, 14.875)
8:6/size_in_atlas = Vector2i(2, 3)
8:6/0 = 0
8:6/0/y_sort_origin = 17
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.8125, 18, -5.78944, 20.5945, -1.8125, 21.875, 1.63519, 21.8319, 5.96622, 20.7713, 5.87783, 18.2964, -0.4375, 16.625)
10:7/size_in_atlas = Vector2i(2, 2)
10:7/0 = 0
10:7/0/y_sort_origin = 5
10:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.5625, -8, 5.5625, -8, 11.6875, 1.375, 11.5625, 4.5, 9.4375, 9, -6.8125, 9, -11.9375, 5.625, -12.3125, -1.875)

[sub_resource type="TileSet" id="TileSet_5edjg"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_l3srv")
sources/1 = SubResource("TileSetAtlasSource_gy6lm")
sources/2 = SubResource("TileSetAtlasSource_cvlds")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ikyw"]
size = Vector2(29, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ai3bh"]
size = Vector2(15, 39)

[node name="Level1" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_7b8lq")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = SubResource("TileSet_5edjg")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(0, 196608, 0, 65536, 196608, 1, 131072, 262144, 1, 262144, 65536, 2, 327680, 1, 0, 393216, 1, 0, 458752, 1, 0, 524288, 1, 0, 589824, 1, 0, 655360, 1, 0, 720896, 1, 0, 1, 1, 0, 65537, 1, 0, 131073, 131072, 0, 196609, 131072, 1, 262145, 327680, 0, 327681, 65536, 2, 393217, 1, 0, 458753, 1, 0, 524289, 1, 0, 589825, 1, 0, 655361, 1, 0, 720897, 1, 0, 2, 1, 0, 65538, 1, 0, 131074, 131072, 0, 196610, 131072, 1, 262146, 131072, 1, 327682, 327680, 0, 393218, 65536, 1, 458754, 65536, 1, 524290, 65536, 2, 589826, 1, 0, 655362, 1, 0, 720898, 1, 0, 3, 1, 0, 65539, 1, 0, 131075, 131072, 0, 196611, 131072, 1, 262147, 131072, 1, 327683, 131072, 1, 393219, 131072, 1, 458755, 131072, 1, 524291, 327680, 0, 589827, 65536, 2, 655363, 1, 0, 720899, 1, 0, 4, 1, 0, 65540, 1, 0, 131076, 196608, 0, 196612, 196608, 1, 262148, 262144, 1, 327684, 131072, 1, 393220, 131072, 1, 458756, 131072, 1, 524292, 131072, 1, 589828, 131072, 2, 655364, 1, 0, 720900, 1, 0, 5, 1, 0, 65541, 1, 0, 131077, 1, 0, 196613, 1, 0, 262149, 131072, 0, 327685, 131072, 1, 393221, 131072, 1, 458757, 131072, 1, 524293, 131072, 1, 589829, 131072, 2, 655365, 1, 0, 720901, 1, 0, 6, 1, 0, 65542, 1, 0, 131078, 1, 0, 196614, 1, 0, 262150, 196608, 0, 327686, 196608, 1, 393222, 196608, 1, 458758, 262144, 1, 524294, 131072, 1, 589830, 131072, 2, 655366, 1, 0, 720902, 1, 0, 7, 1, 0, 65543, 1, 0, 131079, 1, 0, 196615, 1, 0, 262151, 1, 0, 327687, 1, 0, 393223, 1, 0, 458759, 131072, 0, 524295, 131072, 1, 589831, 131072, 2, 655367, 1, 0, 720903, 1, 0, 8, 1, 0, 65544, 1, 0, 131080, 1, 0, 196616, 1, 0, 262152, 1, 0, 327688, 1, 0, 393224, 1, 0, 458760, 131072, 0, 524296, 131072, 1, 589832, 131072, 2, 655368, 1, 0, 720904, 1, 0, 9, 1, 0, 65545, 1, 0, 131081, 1, 0, 196617, 1, 0, 262153, 1, 0, 327689, 1, 0, 393225, 65536, 0, 524297, 131072, 1, 589833, 131072, 2, 655369, 1, 0, 720905, 1, 0, 10, 1, 0, 65546, 1, 0, 131082, 1, 0, 196618, 1, 0, 262154, 1, 0, 327690, 1, 0, 393226, 131072, 0, 458762, 131072, 1, 524298, 262144, 0, 589834, 196608, 2, 655370, 1, 0, 720906, 1, 0, 11, 1, 0, 65547, 1, 0, 131083, 1, 0, 196619, 1, 0, 262155, 1, 0, 458763, 131072, 1, 524299, 131072, 2, 589835, 1, 0, 655371, 1, 0, 720907, 1, 0, 12, 1, 0, 65548, 1, 0, 131084, 1, 0, 196620, 1, 0, 262156, 1, 0, 327692, 65536, 0, 393228, 327680, 1, 458764, 131072, 1, 524300, 131072, 2, 589836, 1, 0, 655372, 1, 0, 720908, 1, 0, 13, 1, 0, 65549, 1, 0, 131085, 1, 0, 196621, 1, 0, 262157, 65536, 0, 327693, 327680, 1, 393229, 131072, 1, 458765, 262144, 0, 524301, 196608, 2, 589837, 1, 0, 655373, 1, 0, 720909, 1, 0, 14, 1, 0, 65550, 1, 0, 131086, 1, 0, 196622, 1, 0, 262158, 131072, 0, 327694, 131072, 1, 393230, 131072, 1, 458766, 131072, 2, 524302, 1, 0, 589838, 1, 0, 655374, 1, 0, 720910, 1, 0, 15, 1, 0, 65551, 1, 0, 131087, 1, 0, 196623, 1, 0, 262159, 131072, 0, 327695, 131072, 1, 393231, 131072, 1, 458767, 327680, 0, 524303, 65536, 2, 589839, 1, 0, 655375, 1, 0, 720911, 1, 0, 16, 1, 0, 65552, 1, 0, 131088, 1, 0, 196624, 1, 0, 262160, 196608, 0, 327696, 196608, 1, 393232, 262144, 1, 458768, 131072, 1, 524304, 327680, 0, 589840, 65536, 2, 655376, 1, 0, 720912, 1, 0, 17, 1, 0, 65553, 1, 0, 131089, 1, 0, 196625, 1, 0, 262161, 1, 0, 327697, 1, 0, 393233, 196608, 0, 458769, 262144, 1, 524305, 131072, 1, 589841, 327680, 0, 655377, 65536, 2, 720913, 1, 0, 18, 1, 0, 65554, 1, 0, 131090, 1, 0, 196626, 1, 0, 262162, 1, 0, 327698, 1, 0, 393234, 1, 0, 458770, 131072, 0, 524306, 131072, 1, 589842, 131072, 1, 655378, 131072, 2, 720914, 1, 0, 19, 1, 0, 65555, 1, 0, 131091, 1, 0, 196627, 1, 0, 262163, 1, 0, 327699, 1, 0, 393235, 1, 0, 458771, 131072, 0, 524307, 131072, 1, 589843, 131072, 1, 655379, 131072, 2, 720915, 1, 0, 20, 1, 0, 65556, 1, 0, 131092, 1, 0, 196628, 1, 0, 262164, 1, 0, 327700, 1, 0, 393236, 1, 0, 458772, 131072, 0, 524308, 131072, 1, 589844, 131072, 1, 655380, 131072, 2, 720916, 1, 0, 21, 1, 0, 65557, 1, 0, 131093, 1, 0, 196629, 1, 0, 262165, 1, 0, 327701, 1, 0, 393237, 65536, 0, 458773, 327680, 1, 524309, 131072, 1, 589845, 262144, 0, 655381, 196608, 2, 720917, 1, 0, 22, 1, 0, 65558, 1, 0, 131094, 1, 0, 196630, 1, 0, 262166, 1, 0, 327702, 1, 0, 393238, 131072, 0, 458774, 131072, 1, 524310, 262144, 0, 589846, 196608, 2, 655382, 1, 0, 720918, 1, 0, 23, 1, 0, 65559, 1, 0, 131095, 1, 0, 196631, 1, 0, 262167, 1, 0, 327703, 1, 0, 393239, 131072, 0, 458775, 131072, 1, 524311, 131072, 2, 589847, 1, 0, 655383, 1, 0, 720919, 1, 0, 24, 1, 0, 65560, 1, 0, 131096, 1, 0, 196632, 1, 0, 262168, 1, 0, 327704, 65536, 0, 393240, 327680, 1, 458776, 131072, 1, 524312, 131072, 2, 589848, 1, 0, 655384, 1, 0, 720920, 1, 0, 25, 1, 0, 65561, 1, 0, 131097, 1, 0, 196633, 1, 0, 262169, 1, 0, 327705, 131072, 0, 393241, 131072, 1, 458777, 262144, 0, 524313, 196608, 2, 589849, 1, 0, 655385, 1, 0, 720921, 1, 0, 26, 1, 0, 65562, 1, 0, 131098, 1, 0, 196634, 1, 0, 262170, 1, 0, 327706, 131072, 0, 393242, 131072, 1, 458778, 131072, 2, 524314, 1, 0, 589850, 1, 0, 655386, 1, 0, 720922, 1, 0, 27, 1, 0, 65563, 1, 0, 131099, 1, 0, 196635, 1, 0, 262171, 1, 0, 327707, 131072, 0, 393243, 131072, 1, 458779, 131072, 2, 524315, 1, 0, 589851, 1, 0, 655387, 1, 0, 720923, 1, 0, 196608, 327680, 0, 327691, 1, 0, 393227, 131072, 0, 458761, 327680, 1)
layer_1/name = "cliff"
layer_1/tile_data = PackedInt32Array(15, 65536, 5, 65551, 65536, 5, 131087, 65536, 5, 196623, 65536, 6, 196624, 131072, 6, 196625, 327680, 4, 262161, 65536, 5, 327697, 65536, 6, 327703, 196608, 6, 262167, 262144, 4, 262168, 131072, 6, 262169, 131072, 6, 262170, 131072, 6, 262171, 131072, 6, 327698, 131072, 6, 327699, 131072, 6, 327700, 131072, 6, 327701, 131072, 6, 327702, 131072, 6, 16, 131072, 5, 17, 131072, 5, 18, 131072, 5, 19, 131072, 5, 20, 131072, 5, 21, 131072, 5, 22, 131072, 5, 23, 131072, 5, 24, 131072, 5, 25, 131072, 5, 26, 131072, 5, 27, 131072, 5, 65563, 131072, 5, 65562, 131072, 5, 65561, 131072, 5, 65560, 131072, 5, 65559, 131072, 5, 65558, 131072, 5, 65557, 131072, 5, 65556, 131072, 5, 65555, 131072, 5, 65554, 131072, 5, 65553, 131072, 5, 65552, 131072, 5, 131088, 131072, 5, 131089, 131072, 5, 131090, 131072, 5, 131091, 131072, 5, 131092, 131072, 5, 131093, 131072, 5, 131094, 131072, 5, 131095, 131072, 5, 131096, 131072, 5, 131097, 131072, 5, 131098, 131072, 5, 131099, 131072, 5, 196635, 131072, 5, 196634, 131072, 5, 196633, 131072, 5, 196632, 131072, 5, 196631, 131072, 5, 196630, 131072, 5, 196629, 131072, 5, 196628, 131072, 5, 196627, 131072, 5, 196626, 131072, 5, 262162, 131072, 5, 262163, 131072, 5, 262164, 131072, 5, 262165, 131072, 5, 262166, 131072, 5)
layer_2/name = "ysort"
layer_2/y_sort_enabled = true
layer_2/tile_data = PackedInt32Array(589838, 2, 5, 65538, 393218, 7, 65549, 655362, 7, 720905, 655362, 7, 196618, 2, 5, 655384, 655362, 7, 589825, 524290, 6, 393236, 2, 1, 196634, 2, 1, 655386, 2, 1, 196613, 2, 1, 131078, 2, 1, 655364, 393218, 7, 655372, 393218, 7, 196615, 524290, 6, 65554, 524290, 6, 131093, 2, 5, 196632, 2, 1, 65560, 2, 1, 65562, 655362, 7, 131097, 393218, 7, 720917, 393218, 7, 262156, 2, 1)

[node name="player" parent="." instance=ExtResource("5_7dgp0")]
position = Vector2(50, 75)

[node name="enemy" parent="." instance=ExtResource("6_km6xp")]
position = Vector2(160, 115)

[node name="collisions" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collisions"]
polygon = PackedVector2Array(242, 0, 242, 58, 244, 60, 245, 61, 248, 63, 274, 63, 274, 90, 276, 92, 277, 93, 278, 94, 280, 95, 379, 95, 380, 94, 382, 93, 383, 91, 383, 79, 448, 79, 448, 84, 463, 84, 463, 123, 448, 123, 448, 192, 0, 192, 0, 0, 145, 0, 145, -23, 174, -23, 174, 0, 240, 0, 240, -2, 176, -2, 176, -24, 144, -24, 144, -2, -2, -2, -2, 194, 449, 194, 449, 124, 464, 124, 464, 83, 449, 83, 449, -1, 240, -2, 240, 0)

[node name="heal_entry" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="heal_entry"]
position = Vector2(159.5, -11.5)
shape = SubResource("RectangleShape2D_2ikyw")

[node name="level_2_entry" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="level_2_entry"]
position = Vector2(455.5, 103.5)
shape = SubResource("RectangleShape2D_ai3bh")

[connection signal="body_entered" from="heal_entry" to="." method="_on_heal_entry_body_entered"]
[connection signal="body_exited" from="heal_entry" to="." method="_on_heal_entry_body_exited"]
[connection signal="body_entered" from="level_2_entry" to="." method="_on_level_2_entry_body_entered"]
[connection signal="body_exited" from="level_2_entry" to="." method="_on_level_2_entry_body_exited"]
